Phase2/project
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/build$ make
Consolidate compiler generated dependencies of target server
[ 20%] Building CXX object CMakeFiles/server.dir/source/server.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/source/server.cpp: In function ‘int main(int, char**)’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/source/server.cpp:367:61: error: no matching function for call to ‘std::thread::thread(<unresolved overloaded function type>, int&)’
  367 | ::thread periodicThread(broadcastStats, periodic_port);
      |                                                      ^

In file included from /usr/include/c++/11/future:48,
                 from /usr/include/boost/asio/detail/future.hpp:20,
                 from /usr/include/boost/asio/packaged_task.hpp:19,
                 from /usr/include/boost/asio.hpp:134,
                 from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/include/server.h:4,
                 from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/source/server.cpp:254:
/usr/include/c++/11/bits/std_thread.h:127:7: note: candidate: ‘template<class _Callable, class ... _Args, class> std::thread::thread(_Callable&&, _Args&& ...)’
  127 |       thread(_Callable&& __f, _Args&&... __args)
      |       ^~~~~~
/usr/include/c++/11/bits/std_thread.h:127:7: note:   template argument deduction/substitution failed:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/source/server.cpp:367:61: note:   couldn’t deduce template parameter ‘_Callable’
  367 | ::thread periodicThread(broadcastStats, periodic_port);
      |                                                      ^

In file included from /usr/include/c++/11/future:48,
                 from /usr/include/boost/asio/detail/future.hpp:20,
                 from /usr/include/boost/asio/packaged_task.hpp:19,
                 from /usr/include/boost/asio.hpp:134,
                 from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/include/server.h:4,
                 from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/server/source/server.cpp:254:
/usr/include/c++/11/bits/std_thread.h:157:5: note: candidate: ‘std::thread::thread(std::thread&&)’
  157 |     thread(thread&& __t) noexcept
      |     ^~~~~~
/usr/include/c++/11/bits/std_thread.h:157:5: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/11/bits/std_thread.h:121:5: note: candidate: ‘std::thread::thread()’
  121 |     thread() noexcept = default;
      |     ^~~~~~
/usr/include/c++/11/bits/std_thread.h:121:5: note:   candidate expects 0 arguments, 2 provided
make[2]: *** [CMakeFiles/server.dir/build.make:76: CMakeFiles/server.dir/source/server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:85: CMakeFiles/server.dir/all] Error 2
make: *** [Makefile:101: all] Error 2
